--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="activity_game_flips">Flips: %1$d</string>
 
     <!-- Scores activity -->
-
+    <string name="activity_scores_title">Scores</string>
 
 </resources>
